# summerschool24

./: pyproject.toml
app/: GENAI_EXERCISE.md  app.py  chatbot.py  hybrid_search.py  playground.ipynb
data/tsa02/: README.md
notebooks/: 01tsa_basics.ipynb  03tsa_forecasting_showcase_prophet.ipynb
